--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -5,6 +5,7 @@ classes:
   - ci_environment::base
   - ci_environment::dns
   - gds_collectd
+  - gds_mawk
   - gds_accounts
   - ci_environment::firewall_config::base
   - locales
